tests/baselines/reference/propertyAccessibility1.errors.txt
==== tests/cases/compiler/propertyAccessibility1.ts (1 errors) ====
    class Foo {
      private privProp = 0;
    }
    var f = new Foo();
    f.privProp;
      ~~~~~~~~
!!! propertyAccessibility1.ts(5,3): error TS2107: 'Foo.privProp' is inaccessible.
    